--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "artistlab-bootcamp",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "npx vite-bundle-analyzer",
+    "lighthouse": "npx lighthouse http://localhost:4173 --view"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "lucide-react": "^0.344.0",
-    "nodemailer": "^6.9.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
@@ -20,7 +21,6 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-bundle-analyzer": "^0.7.0"
   }
 }
