Fix Browserslist Database and Build Issues

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "analyze": "npx vite-bundle-analyzer",
-    "lighthouse": "npx lighthouse http://localhost:4173 --view"
+    "lighthouse": "npx lighthouse http://localhost:4173 --view",
+    "postinstall": "npx update-browserslist-db@latest"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "browserslist": "^4.23.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -35,5 +37,10 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
     "vite-bundle-analyzer": "^0.7.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
